# sql2arrow-demo

./: .gitignore  Cargo.toml  pyproject.toml
src/: arraybuilder.rs  lib.rs  partition.rs  types.rs
