[package]
name = "sql2arrow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sql2arrow"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.22"
pyo3-arrow = "0.5"
sqlparser = "0.51"

# arrow libs
arrow = "53.2"
arrow-schema = "53.2"

thiserror = "1.0"
anyhow = "1.0"
lazy_static = "1.5"

