[package]
name = "sql2arrow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sql2arrow"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {version = "0.22", features = ["abi3", "abi3-py38"]}
pyo3-arrow = {version = "0.5", default-features = false}
sqlparser = "0.51"

flate2 = "1.0"

iceberg = {git = "https://github.com/apache/iceberg-rust", rev = "50345196c87b00badc1a6490aef284e84f4c3e9a"}

# arrow libs
arrow = "53"
arrow-array = "53"
arrow-schema = "53"

thiserror = "1.0"
anyhow = "1.0"
crossbeam-channel = "0.5"

jemallocator = {version = "0.5", features = ["disable_initial_exec_tls"]}
mimalloc = "0.1"


